# Tribe

./: .gitignore  README.md  debug_lambda_api.py  improve_team_creation.py  jest.config.js  package.json  requirements.txt  setup.py  team_creator.py  test_anthropic_complex.py  test_api_key.py  test_character_team.py  test_complex_request.py  test_complex_three.py  test_concise_agent.py  test_crewai_claude.py  test_direct_complex.py  test_extension.py  test_extension_debug.py  test_extension_formatted.py  test_full_team_creation.py  test_implementation.py  test_lambda_chunked.py  test_medium_complexity.py  test_minimal_agent.py  test_minimal_complexity.py  test_openai_complex.py  test_professional_team.py  test_simple_json.py  test_simple_model.py  test_simple_professional.py  test_simple_request.py  test_simple_team.py  test_simpler_agent.py  test_single_agent.py  test_single_member.py  test_structured_request.py  test_structured_team.py  test_team_create.py  test_team_create_full.py  (+7 more)
tribe/: .env.example  README.md  __init__.py  __main__.py  crew.py  extension.py  lambda.ts  main.py  pyproject.toml  repomix-output.txt  requirements.txt  server.py  server.py.backup  server.py.broken  test_agent.py  test_implementation.py  test_team.py  test_tribe.py
tribe/agents/: __init__.py
tribe/commands/: __init__.py  agent_commands.py
tribe/core/: __init__.py  config.py  crew_collab.py  direct_api.py  dynamic.py  dynamic_flow_generator.py  feedback_system.py  foundation_model.py  learning_system.py  reflection_system.py  team_optimizer.py
tribe/src/: extension.ts
(+129 files in other folders)
